[package]
name = "spider-macro"
version = "0.1.4"
edition = "2024"
authors = ["mzyui <mzyui@proton.me>"]
description = "Proc-macros for the spider-lib web scraping framework."
homepage = "https://github.com/spider-lib/spider-macro"
repository = "https://github.com/spider-lib/spider-macro"
license = "MIT"
readme = "README.md"
keywords = ["web-scraping", "macros", "proc-macros", "rust"]
categories = ["web-programming", "development-tools", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"